--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
 									<h2>HELLO<span class="symbol">!!</span></h2>
 								</header>
 								<h3 class="name">I am <span class="blue">Anubhav Kumar,</span> a programming enthusiast. </h3>
-								<p class="about">Currently, I am persuing B.tech in Electrical Engineering from Indian Institute of Technology (BHU), Varanasi.
+								<p class="about">Currently, I am pursuing B.tech in Electrical Engineering from the Indian Institute of Technology (BHU), Varanasi.
 									I will be graduating in May 2021. <a class="underline" href="./assets/AnubhavKumarResume.pdf">Here is the link to my CV</a>. 
-									I really enjoy doing competitive programming. I love the satisfaction I get when I happen to write a particularly elegant 
+									I enjoy doing competitive programming. I love the satisfaction I get when I happen to write an incredibly elegant 
 									piece of code. I often learn new technologies off the web and out of books or through experimentation. But other than that, 
 									my hobbies are playing cricket, reading and travelling. <br/> I am actively looking for an opportunity providing intellectually 
 									challenging work in the field of computers science for proving and enriching my knowledge and skills.</p>
