Added New Profile Pic

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<div id="wrapper" class="fade-in">
 				<!-- Intro -->
 					<div id="intro">
-						<img class="imagemain" src="images/My Pic.jpg" alt="" />
+						<img class="imagemain" src="images/My Pic3.jpg" alt="" />
 						<h1>MY PORTFOLIO</h1>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
