--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 			<div id="wrapper" class="fade-in">
 				<!-- Intro -->
 					<div id="intro">
-						<img class="imagemain" src="images/My Pic3.jpg" alt="" />
-						<h1>MY PORTFOLIO</h1>
+						<img class="imagemain" src="images/My Pic2.jpg" alt="" />
+						<h1>MY <span class="blue">PORTFOLIO</span></h1>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
