Changing Index.html

--- a/index.html
+++ b/index.html
@@ -52,9 +52,11 @@
 									<h2>HELLO<span class="symbol">!!</span></h2>
 								</header>
 								<h3 class="name">I am <span class="blue">Anubhav Kumar,</span> a programming enthusiast. </h3>
-								<p class="about">Currently, I am pursuing B.tech in Electrical Engineering from the Indian Institute of Technology (BHU), Varanasi.
-									I will be graduating in May 2021. <a class="underline" href="./assets/AnubhavKumarResume.pdf">Here is the link to my CV</a>. 
-									I enjoy doing competitive programming. I love the satisfaction I get when I happen to write an incredibly elegant 
+								<p class="about">I'm a final year undergraduate student at Indian Institute of Technology (BHU), Varanasi.
+									and will be graduating in May 2021. <a class="underline" href="./assets/AnubhavKumarResume.pdf">Here is the link to my Resume.</a>.
+									I'm a full stack Java Developer. I am interested in Software Development and always been a problem solver. Most of my projects have their
+									inspiration from the problems, I saw in the surroundings. Learning and developing are the things, I'm always fond of.
+									I love the satisfaction I get when I happen to write an incredibly elegant
 									piece of code. I often learn new technologies off the web and out of books or through experimentation. But other than that, 
 									my hobbies are playing cricket, reading and travelling. <br/> I am actively looking for an opportunity providing intellectually 
 									challenging work in the field of computers science for proving and enriching my knowledge and skills.</p>
