--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 									<h2>HELLO<span class="symbol">!!</span></h2>
 								</header>
 								<h3 class="name">I am <span class="blue">Anubhav Kumar,</span> a programming enthusiast. </h3>
-								<p class="about">I'm a final year undergraduate student at Indian Institute of Technology (BHU), Varanasi.
+								<p class="about">I'm a final year undergraduate student at Indian Institute of Technology (BHU), Varanasi
 									and will be graduating in May 2021. <a class="underline" href="./assets/AnubhavKumarResume.pdf">Here is the link to my Resume.</a>.
 									I'm a full stack Java Developer. I am interested in Software Development and always been a problem solver. Most of my projects have their
 									inspiration from the problems, I saw in the surroundings. Learning and developing are the things, I'm always fond of.
