--- a/Extra.html
+++ b/Extra.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Anubhav Kumar</title>
+    <link rel="shortcut icon" href="images/A.svg">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
