adding nlp project

--- a/Projects.html
+++ b/Projects.html
@@ -54,6 +54,19 @@
                 <section class="posts">
                     <article>
                         <header>
+                            <span class="date">August 15, 2020</span>
+                            <h2><a href="javascript:;">Natural Language Processing</a></h2>
+                        </header>
+                        <a href="javascript:;" class="image fit"><img src="images/newspaper.jpg" alt="" /></a>
+                        <h3>Natural Language Processing</h3>
+                        <p>Automating the conversion of raw news headline to grammatically correct sentence using statistical
+                        Machine Translation (Phrase-Based and Syntax Tree)</p>
+                        <ul class="actions special">
+                            <li><a href="https://github.com/anubhavkmr8/Conversion-of-Raw-News-Headline-to-Canonical-Form" class="button icon brands alt fa-github">GitHub</a></li>
+                        </ul>
+                    </article>
+                    <article>
+                        <header>
                             <span class="date">January 15, 2020</span>
                             <h2><a href="javascript:;">Smart India Hackathon</a></h2>
                         </header>
@@ -62,7 +75,7 @@
                         <p>A school management web application for schools in hilly and rough terrain areas with
                             low internet access through which student’s data can be managed.</p>
                         <ul class="actions special">
-                            <li><a href="javascript:;" class="button icon brands alt fa-github">GitHub</a></li>
+                            <li><a href="https://github.com/anubhavkmr8/Smart-India-Hackathon" class="button icon brands alt fa-github">GitHub</a></li>
                         </ul>
                     </article>
                     <article>
