--- a/Experience.html
+++ b/Experience.html
@@ -63,6 +63,17 @@
                 </blockquote>
                 <p>For Complete Interview Experience. <a class="underline"
                         href="https://medium.com/@anubhavkmr8/amazon-interview-experience-534649f266f0">Checkout my blog.</a></p>
+
+                <h2 class="name">Bizongo, Bangalore</h2>
+                <h4 class="name">Software Development Engineer (SDE) Intern</h4>
+                <blockquote>
+                    <ul>
+                        <li>Part of Order Management System Team.</li>
+                        <li>Developed backend API to automate the manual work for the calculation of the Logistics Cost for the deals with the
+                        client.</li>
+                        <li>Tech Stack – Ruby on Rails Framework for Backend, MongoDB, and PostgreSQL databases and Git as version control.</li>
+                    </ul>
+                </blockquote>
             </article>
         </div>
 
