--- a/Skills.html
+++ b/Skills.html
@@ -53,7 +53,7 @@
                 <p>Data Structures and Algorithms, Machine Learning, Web Development, Operating System, Mathematics</p>
                 <hr />
                 <h3 class="name">Technologies</h3>
-                <p>React, Spring, Rest API, JUnit, MySQL, PostgreSQL, Git, Linux, MATLAB</p>
+                <p>React, Spring, RubyonRails, Rest API, JUnit, MySQL, PostgreSQL, Git, Linux, MATLAB</p>
                 <hr />
                 <h3 class="name">Other Skills</h3>
                 <p>Problem Solving, Quantitative aptitude</p>
