--- a/index.html
+++ b/index.html
@@ -52,13 +52,14 @@
 									<h2>HELLO<span class="symbol">!!</span></h2>
 								</header>
 								<h3 class="name">I am <span class="blue">Anubhav Kumar,</span> a programming enthusiast. </h3>
-								<p class="about">I'm a final year undergraduate student at Indian Institute of Technology (BHU), Varanasi
-									and will be graduating in May 2021. <a class="underline" href="./assets/AnubhavKumarResume.pdf">Here is the link to my Resume.</a>.
-									I'm a full stack Java Developer. I am interested in Software Development and always been a problem solver. Most of my projects have their
-									inspiration from the problems, I saw in the surroundings. Learning and developing are the things, I'm always fond of.
-									I love the satisfaction I get when I happen to write an incredibly elegant
-									piece of code. I often learn new technologies off the web and out of books or through experimentation. But other than that, 
-									my hobbies are playing cricket, reading and travelling. <br/> I am actively looking for an opportunity providing intellectually 
+								<p class="about">I'm a final year undergraduate at the Indian Institute of Technology (BHU), Varanasi pursuing Bachelor of Technology in Electrical Engineering. <a class="underline" label="AnubhavKumarResume" href="./assets/AnubhavKumarResume.pdf">Here is the link to my Resume.</a>.
+									I identify myself as a software developer who enjoys the process of learning. During the four years at IIT Varanasi, I
+									equipped myself with the fundamentals of Computer Science as well as I learned a tad bit about learning how to learn. I
+									am interested in Software Development and always been a problem solver. Most of my projects have their inspiration from
+									the problems, I saw in the surroundings. My first encounter with the backend code was in Amazon during my summer internship, and I've enjoyed it ever since. I
+									love the satisfaction I get when I happen to write an incredibly elegant piece of code. I often learn new technologies
+									off the web and out of books or through experimentation. But other than that, my hobbies are playing cricket, reading
+									and travelling. <br/> I am actively looking for an opportunity providing intellectually 
 									challenging work in the field of computers science for proving and enriching my knowledge and skills.</p>
 								<hr />
 								<h4 class="name">My <span class="blue">Competitive Programming</span> Profiles: </h4>
