--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 									<h2>HELLO<span class="symbol">!!</span></h2>
 								</header>
 								<h3 class="name">I am <span class="blue">Anubhav Kumar,</span> a programming enthusiast. </h3>
-								<p class="about">I'm a final year undergraduate at the Indian Institute of Technology (BHU), Varanasi pursuing Bachelor of Technology in Electrical Engineering. <a class="underline" label="AnubhavKumarResume" href="./assets/AnubhavKumarResume.pdf">Here is the link to my Resume.</a>.
-									I identify myself as a software developer who enjoys the process of learning. During the four years at IIT Varanasi, I
+								<p class="about">I'm a final year undergraduate at the Indian Institute of Technology (BHU), Varanasi pursuing Bachelor of Technology in Electrical Engineering. <a class="underline" label="AnubhavKumarResume" href="./assets/AnubhavKumarResume.pdf">Here is the link to my Resume.</a>
+									I identify myself as a software developer who enjoys the process of learning. During the four years at IIT, Varanasi, I
 									equipped myself with the fundamentals of Computer Science as well as I learned a tad bit about learning how to learn. I
 									am interested in Software Development and always been a problem solver. Most of my projects have their inspiration from
 									the problems, I saw in the surroundings. My first encounter with the backend code was in Amazon during my summer internship, and I've enjoyed it ever since. I
